--- a/src/app/weather-card/weather-card.component.scss
+++ b/src/app/weather-card/weather-card.component.scss
@@ -180,29 +180,43 @@ mat-card-actions{
         }
 
         .scroll-hint.right-arrow {
-        right: 13%;
-        top: 44%;
+            right: 13%;
+            top: 44%;
         }
 
         .scroll-hint.left-arrow {
-        left: 32px;
-        top: 44%;
+            left: 32px;
+            top: 44%;
         }
         ::ng-deep .mat-mdc-dialog-container{
             margin:10px
         }
-        button>mat-icon{
+        button > mat-icon{
             font-size: 90px;
-    width: 100%;
-    height: 100px;
-    margin: 0;
-    top: 30px;
+            width: 100%;
+            height: 100px;
+            margin: 0;
+            top: 30px;
         }
+.errorMsg{
+position: absolute;
+    width: 300px;
+    height: 100px;
+    text-align: center;
+    background-color: white;
+    color: black;
+    z-index: 1;
+    top: 31%;
+    left: 17%;
+    align-items: center;
+    align-content: center;
+}
+
   }
 
   @media (min-width:'390px') and (max-width:'844px') {
         mat-card{
-            min-width:300px !important
+            min-width:350px !important
         }
         .container{
             height: 100%;
@@ -210,4 +224,96 @@ mat-card-actions{
           ::ng-deep .mat-mdc-dialog-container {
           padding:10px
         }
+        .errorMsg{
+            position: absolute;
+            width: 300px;
+            height: 100px;
+            text-align: center;
+            background-color: white;
+            color: black;
+            z-index: 1;
+            top: 31%;
+            left: 15%;
+            align-items: center;
+            align-content: center;
+        }
+  }
+
+   @media (min-width:'360px') and (max-width:'740px') {
+        .container{
+        height: 100%;
+     }
+        mat-card{
+        min-width: 260px !important;
+        // height: 74px;
+        // /* width: 100%; */
+        // position: relative;
+        // top: 14%;
+        }
+
+        // .scroll-hint.right-arrow {
+        //     right: 13%;
+        //     top: 44%;
+        // }
+
+        // .scroll-hint.left-arrow {
+        //     left: 32px;
+        //     top: 44%;
+        // }
+        ::ng-deep .mat-mdc-dialog-container{
+            padding:10px
+        }
+       .errorMsg{
+    position: absolute;
+    width: 300px;
+    height: 100px;
+    text-align: center;
+    background-color: white;
+    color: black;
+    z-index: 1;
+    top: 31%;
+    left: 15%;
+    align-items: center;
+    align-content: center;
+}
+  }
+
+  
+   @media (min-width:'430px') and (max-width:'932px') {
+        .container{
+        height: 100%;
+     }
+        mat-card{
+        min-width: 300px !important;
+        // height: 74px;
+        // /* width: 100%; */
+        // position: relative;
+        // top: 14%;
+        }
+
+        // .scroll-hint.right-arrow {
+        //     right: 13%;
+        //     top: 44%;
+        // }
+
+        // .scroll-hint.left-arrow {
+        //     left: 32px;
+        //     top: 44%;
+        // }
+        ::ng-deep .mat-mdc-dialog-container{
+            padding:10px
+        }
+       .errorMsg{
+    position: absolute;
+    width: 300px;
+    height: 100px;
+    text-align: center;
+    background-color: white;
+    color: black;
+    z-index: 1;
+    top: 31%;
+    left: 15%;
+    align-items: center;
+    align-content: center;
+}
   }
